# numpyro_example

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
myapp/: baseball.py  bayesian_regression.py  boston_missing_regression.py  boston_pca_regression.py  boston_regression.py  hmm.py  hmm_enum.py  kalman_filter.py  school.py  template.py  time_series.py  vae.py
myapp/deep/: vae.py
myapp/general/: mini_numpyro.py  neals_funnel.py  volatility.py
myapp/notgood/: jax_basic.py  school.py
myapp/regression/: bayesian_regression.py  boston_pca_regression.py  boston_regression.py
myapp/time_series/: dlm.py  heavy_tailed.py  hierarchical_model.py  hmm_enum.py  kalman_filter.py  kalman_filter_multi.py  kalman_filter_svi.py  seasonal_ssm.py  time_series.py
