[tool.poetry]
name = "myapp"
version = "0.0.1"
description = ""
authors = ["Ryosuke Nagumo <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpyro = "^0.5.0"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
jupyterlab = "^3.0.9"
arviz = "^0.11.2"
scikit-learn = "^0.24.1"
funsor = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mypy = "^0.812"
flake8 = "^3.8.4"
isort = "^5.7.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
